--- a/README.adoc
+++ b/README.adoc
@@ -1,7 +1,7 @@
 = Effective Testing for Quarkus Applications
 2023-04-18
 
-- Test Principles & Constraints
+- ✓ Test Principles & Constraints
   - execute fast, provide fast feedback
     code level tests, per hundreds < 1s
     integrative system test, per test ideally < 1s
@@ -12,8 +12,10 @@
   - ability to support hot-reload development modes
   - compatibility with running & configuring test environment individually
   - reusability of test components (technical & functional) for multiple scenarios
-- Test Scopes
+- ✓ Test Scopes
+  Code-level unit tests, Code-level use case / component tests, Code-level integration tests, system / acceptance tests
 - Code-Level Tests
+  JUnit, Mockito, AssertJ
 - Use Case tests, Component Tests
 - Code-Level Integration Tests
   Testcontainers
